plugins/xpath/xpath-lang/testData/xpath/highlighting/malformedEmptyStringLiteral.xpath
<error descr="Malformed string literal">'</error>